fix width of robot overflowing screen on portrait mobile

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,9 @@
   flex-grow: 1;
   flex-basis: 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   padding-top: 10vh;
 }
 
@@ -47,7 +49,6 @@
   height: 20vh;
   display: flex;
   justify-content: center;
-  justify-self: flex-end;
   z-index: 9;
 }
 
